# atmacup18

./: memo.md  pyproject.toml
notebook/: 000_EDA.ipynb  000_LightGBM_Baseline.ipynb  000_NN_NoImage.ipynb  000_ensemble.ipynb  000_stacking.ipynb  001_LightGBM_Baseline.ipynb  001_ensemble.ipynb  001_stacking.ipynb  002_LightGBM_Baseline.ipynb  002_ensemble.ipynb  002_stacking.ipynb  003_LightGBM_Baseline.ipynb  003_ensemble.ipynb  003_stacking.ipynb  004_LightGBM_Baseline.ipynb  baseline052.ipynb  visualize_trajectory.ipynb
src/: exp100_latesub_baseline.py  fixed_make_depth_map.py  make_depth_map.py  train.py
src/dataset/: __init__.py  mlp_dataset.py
src/model/: __init__.py  mlp.py
src/trainer/: __init__.py  nntrainer.py
